--- a/packaging/debian/ovd-desktop-settings/hardy/control
+++ b/packaging/debian/ovd-desktop-settings/hardy/control
@@ -2,7 +2,7 @@ Source: ovd-desktop-settings
 Section: x11
 Priority: extra
 Maintainer: Samuel Bovée <samuel@ulteo.com>
-Build-Depends: cdbs, debhelper (>= 6), intltool,
+Build-Depends: cdbs, cdbs-xfce, debhelper (>= 6), intltool,
  libthunar-vfs-1-dev, libxfce4util-dev (>= 4.4), libxfcegui4-dev (>= 4.4),
  xfce4-panel-dev (>= 4.4), xfce4-dev-tools, libgconf2-dev, libgtk2.0-dev
 Standards-Version: 3.7.3
@@ -19,16 +19,16 @@ Description: Ulteo Open Virtual Desktop - Startup scripts and default settings
  * script that can be used to start an X session on an Open Virtual
  Desktop application server.
 
-Package: ulteo-plymouth-theme-vdi
+Package: ulteo-plymouth-theme
 Architecture: all
 Depends: ${misc:Depends}, plymouth, plymouth-label
 Provides: plymouth-theme
-Description: Ulteo VDI: graphical boot animation theme
+Description: Ulteo plymouth theme: graphical boot animation theme
  Plymouth is an application that runs very early in the boot process
  (even before the root filesystem is mounted!) that provides a graphical
  boot animation while the boot process happens in the background.
  .
- This package contains the default ulteo-vdi-logo theme.
+ This package contains the default ulteo logo theme.
 
 Package: ulteo-xfce4-restricted-menu-plugin
 Architecture: any
