--- a/packaging/debian/ovd-desktop-settings/lucid/control
+++ b/packaging/debian/ovd-desktop-settings/lucid/control
@@ -23,12 +23,12 @@ Package: ulteo-plymouth-theme
 Architecture: all
 Depends: ${misc:Depends}, plymouth, plymouth-label
 Provides: plymouth-theme
-Description: Ulteo VDI: graphical boot animation theme
+Description: Ulteo plymouth theme: graphical boot animation theme
  Plymouth is an application that runs very early in the boot process
  (even before the root filesystem is mounted!) that provides a graphical
  boot animation while the boot process happens in the background.
  .
- This package contains the default ulteo-vdi-logo theme.
+ This package contains the default ulteo logo theme.
 
 Package: ulteo-xfce4-restricted-menu-plugin
 Architecture: any
